# mr-manager

./: .gitignore  CHANGELOG.md  README.md  markdownlint.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question_support.yml  refactor.yml
.github/workflows/: benchmark.yml  code_quality_checks.yml  pr_quality_checks.yml  release.yml  wiki.yml
.github/workflows/setup/: action.yml
scripts/: add_auto_gen_wiki_hint.sh  benchmark.py
src/mr_manager/: __init__.py  cache.py  config.py  discovery.py  main.py  ui.py  ui.tcss
src/mr_manager/cli/: __init__.py  version_flag.py
src/mr_manager/core/: __init__.py  cache.py  config.py  discovery.py  user_config.py
src/mr_manager/ui/: __init__.py  action_modal.py  app.py  config_editor_modal.py  save_success_modal.py  ui.tcss  unsaved_changes_modal.py
src/mr_manager/ui/selection/: __init__.py  controller.py  model.py
wiki/: Contribution-Guidelines.md  Home.md  Release-Process.md  Troubleshooting.md  _Footer.md  _Sidebar.md
