[project]
name = "mr-manager"
version = "0.1.0"
description = "TUI-based CLI for managing repositories inside a *myrepos* config file. Simplifies adding and removing repos with an interactive interface."
authors = [
    { name = "Moritz Wieland", email = "moritz.wieland@googlemail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.1.1",
]

[project.scripts]
mr-manager = "mr_manager.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
