[project]
name = "mr-manager"
dynamic = ["version"]
description = "TUI-based CLI for managing repositories inside a *myrepos* config file. Simplifies adding and removing repos with an interactive interface."
authors = [
    { name = "Moritz Wieland", email = "moritz.wieland@googlemail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[project.scripts]
mr-manager = "mr_manager.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty.src]
exclude = ["scripts/"]
